Code cleanup using Roslynator Added functions host for API using Menes Wired up content item GET/POST
